welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: ';' expected but 'else' found.
	else {x = x+1; y = y-1}}
        ^